assembly configued to only work in editor

--- a/Editor/UnityTodo.asmdef
+++ b/Editor/UnityTodo.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "UnityTodo"
+    "name": "UnityTodo",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
