--- a/Editor/SomeDeveloper.UnityTodo.Editor.asmdef
+++ b/Editor/SomeDeveloper.UnityTodo.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityTodo",
+    "name": "SomeDeveloper.UnityTodo.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
